--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,10 @@
 <html ${htmlAttrs}>
 
 <head>
-  ${head}
+  <script src="https://unpkg.com/codyhouse-framework/main/assets/js/util.js"></script>
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
+  ${head}
+
 
 
 
