--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,27 @@
 <head>
   <script src="https://unpkg.com/codyhouse-framework/main/assets/js/util.js"></script>
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
+  <script>
+    (function () {
+      var qs,
+        js,
+        q,
+        s,
+        d = document,
+        gi = d.getElementById,
+        ce = d.createElement,
+        gt = d.getElementsByTagName,
+        id = "typef_orm",
+        b = "https://embed.typeform.com/";
+      if (!gi.call(d, id)) {
+        js = ce.call(d, "script");
+        js.id = id;
+        js.src = b + "embed.js";
+        q = gt.call(d, "script")[0];
+        q.parentNode.insertBefore(js, q);
+      }
+    })();
+  </script>
   ${head}
 
 
