--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body ${bodyAttrs}>
-  <script src="./util.js"></script>
+  <script src="https://unpkg.com/codyhouse-framework/main/assets/js/util.js"></script>
 
   <script>document.getElementsByTagName("html")[0].className += " js";</script>
   ${app}
