--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,8 @@
 <head>
 
   ${head}
+  <link rel="preload" as="image" href="/assets/static/pocetna-slika-1.76d3c0f.cfe50dcf5de9bbdbf2b422d09eed3784.webp">
+
 
 
 
