--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,7 @@
 <head>
 
   ${head}
-  <link rel="preload" as="image" href="/assets/static/pocetna-slika-1.76d3c0f.cfe50dcf5de9bbdbf2b422d09eed3784.webp">
-
-
-
-
-
+  <link rel="preload" as="image" href="/assets/static/forever-living.webp?width=600&height=400&quality=75&key=4b27087">
 
 </head>
 
