rich snippets za proizvode

--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
       "@context": "https://schema.org/",
       "@type": "WebSite",
       "name": "AlojaNaKlik",
-      "url": "{{ shop.secure_url }}",
+      "url": "https://alojanaklik.rs",
       "potentialAction": {
         "@type": "SearchAction",
-        "target": "{{ shop.secure_url }}/search?type=product&q={search_term_string}",
+        "target": "",
         "query-input": "required name=search_term_string"
       }
     }
