rich snippets proizvodi fb ukinut search

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,8 @@
       "@context": "https://schema.org/",
       "@type": "WebSite",
       "name": "AlojaNaKlik",
-      "url": "https://alojanaklik.rs",
-      "potentialAction": {
-        "@type": "SearchAction",
-        "target": "",
-        "query-input": "required name=search_term_string"
-      }
+      "url": "https://alojanaklik.rs"    
+      
     }
   </script>
 <script type="application/ld+json">
@@ -44,11 +40,11 @@
       "@context": "https://schema.org/",
       "@type": "Brand",
       "name": "AlojaNaKlik",
-      "url": "{{ shop.secure_url }}/",
+      "url": "https://alojanaklik.rs",
       "logo": "https://alojanaklik.rs/aloja-na-klik-logo.png",
 
       "sameAs": [
-        "https://link-to-social-profile-like-fb"
+        "https://www.facebook.com/alojanaklik/"
       ]
 
     }
