korigovan preload path i izmenjene mete za blogove

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
 
   ${head}
-  <link rel="preload" as="image" href="/assets/static/forever-living.webp?width=600&height=400&quality=75&key=4b27087">
+  <link rel="preload" as="image" href="/forever-living.webp?width=600&height=400&quality=75&key=4b27087">
 
 	<script type="application/ld+json">
     {
